--- a/DroidconBoston/DroidconBoston/Base.lproj/Main.storyboard
+++ b/DroidconBoston/DroidconBoston/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -60,13 +61,51 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Kzr-T9-GPX">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="TweetCell" rowHeight="120" id="Kzr-T9-GPX" customClass="TweetCell" customModule="DroidconBoston" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kzr-T9-GPX" id="m0m-bZ-ZLy">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="119"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DQV-7y-IhY">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NG9-3F-Bpx">
+                                                    <rect key="frame" x="8" y="5" width="40" height="40"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="1XX-GF-YaS"/>
+                                            </constraints>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rqo-XJ-W7a">
+                                            <rect key="frame" x="8" y="58" width="359" height="53.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="53.5" id="NOc-5j-wZ0"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="DQV-7y-IhY" firstAttribute="top" secondItem="m0m-bZ-ZLy" secondAttribute="top" id="Kmv-7M-brO"/>
+                                        <constraint firstItem="rqo-XJ-W7a" firstAttribute="top" secondItem="DQV-7y-IhY" secondAttribute="bottom" constant="8" id="ViT-bQ-PhS"/>
+                                        <constraint firstItem="rqo-XJ-W7a" firstAttribute="trailing" secondItem="m0m-bZ-ZLy" secondAttribute="trailingMargin" id="VxG-oP-aPy"/>
+                                        <constraint firstItem="rqo-XJ-W7a" firstAttribute="leading" secondItem="m0m-bZ-ZLy" secondAttribute="leadingMargin" id="eQs-Gh-GeO"/>
+                                        <constraint firstAttribute="trailing" secondItem="DQV-7y-IhY" secondAttribute="trailing" id="vbw-nK-12G"/>
+                                        <constraint firstItem="DQV-7y-IhY" firstAttribute="leading" secondItem="m0m-bZ-ZLy" secondAttribute="leading" id="xh5-u1-5n1"/>
+                                        <constraint firstItem="rqo-XJ-W7a" firstAttribute="bottom" secondItem="m0m-bZ-ZLy" secondAttribute="bottomMargin" id="zlB-rY-FKs"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <connections>
+                                    <outlet property="textContent" destination="rqo-XJ-W7a" id="gaS-vB-hdH"/>
+                                    <outlet property="userImage" destination="NG9-3F-Bpx" id="UQU-Rm-PeA"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -75,10 +114,13 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Social Feed" id="cBv-Tw-Viw"/>
+                    <connections>
+                        <outlet property="tableView" destination="LTH-Zw-Nb9" id="fAL-Wo-fvU"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pCr-oY-qms" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="225" y="-867"/>
+            <point key="canvasLocation" x="224.80000000000001" y="-867.61619190404804"/>
         </scene>
         <!--AR-->
         <scene sceneID="9tf-ah-Vbr">
